; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-port/default/extr_default-date.c_jerry_port_get_current_time.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-port/default/extr_default-date.c_jerry_port_get_current_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @jerry_port_get_current_time() #0 {
  %1 = alloca double, align 8
  %2 = alloca %struct.timeval, align 8
  %3 = call i64 @gettimeofday(%struct.timeval* %2, i32* null)
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %15

5:                                                ; preds = %0
  %6 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = sitofp i64 %7 to double
  %9 = fmul double %8, 1.000000e+03
  %10 = getelementptr inbounds %struct.timeval, %struct.timeval* %2, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = sitofp i64 %11 to double
  %13 = fdiv double %12, 1.000000e+03
  %14 = fadd double %9, %13
  store double %14, double* %1, align 8
  br label %16

15:                                               ; preds = %0
  store double 0.000000e+00, double* %1, align 8
  br label %16

16:                                               ; preds = %15, %5
  %17 = load double, double* %1, align 8
  ret double %17
}

declare dso_local i64 @gettimeofday(%struct.timeval*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
